[gd_scene load_steps=5 format=3 uid="uid://dixwuw7btbhtt"]

[ext_resource type="Script" path="res://scripts/game/tactical_game_screen.gd" id="1_tactical"]
[ext_resource type="PackedScene" uid="uid://c7isometricgrid" path="res://scenes/game/isometric_grid.tscn" id="2_grid"]
[ext_resource type="PackedScene" uid="uid://ctacticalui" path="res://scenes/game/tactical_ui.tscn" id="3_ui"]
[ext_resource type="PackedScene" uid="uid://cmonsterdeck" path="res://scenes/game/ui/monster_deck_ui.tscn" id="4_deckui"]

[node name="TacticalGameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tactical")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="MonsterDeckUI" parent="VBoxContainer" instance=ExtResource("4_deckui")]
layout_mode = 2
anchors_preset = 0
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/HBoxContainer/SubViewportContainer"]
handle_input_events = false
own_world_3d = true
size = Vector2i(1024, 600)
render_target_update_mode = 4

[node name="GameWorld" type="Node3D" parent="VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport"]

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport/GameWorld"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 300, 300)
projection = 1
size = 400.0
far = 1000.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport/GameWorld"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 500, 500)
light_energy = 1.0
shadow_enabled = true

[node name="IsometricGrid" parent="VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport/GameWorld" instance=ExtResource("2_grid")]

[node name="EntityContainer" type="Node3D" parent="VBoxContainer/HBoxContainer/SubViewportContainer/SubViewport/GameWorld/IsometricGrid"]

[node name="TacticalUI" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3_ui")]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 4
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 280.0
offset_bottom = 0.0
grow_horizontal = 1

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Resume"

[node name="MainMenuButton" type="Button" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Main Menu"

[connection signal="pressed" from="PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
